<resources>
    <string name="app_name">Assignment2-Nov11-Dhivya</string>
    <string name ="title_name">Assignment2</string>
    <string name="Prod_type">Product Type</string>
    <string name="Prod_Total">Total</string>
    <string name="Prod_Quantity">Quantity</string>
    <string name="button1"> 1 </string>
    <string name="button2"> 2 </string>
    <string name="button3"> 3 </string>
    <string name="button4"> 4 </string>
    <string name="button5"> 5 </string>
    <string name="button6"> 6 </string>
    <string name="button7"> 7 </string>
    <string name="button8"> 8 </string>
    <string name="button9"> 9 </string>
    <string name="button0"> 0 </string>
    <string name="buttonclear">C</string>
    <string name="buttonbuy"> Buy</string>
    <string name="listprodname">ProductName</string>
    <string name="listprodqty">ProductQuantity</string>
    <string name="listprodprice">ProductPrice</string>
</resources>